--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "angular-tooltips": "^1.2.2",
     "bootstrap": "^4.4.1",
+    "jquery": "^3.5.1",
+    "jquery-typeahead": "^2.11.1",
     "ng2-search-filter": "^0.5.1",
     "ng2-tooltip-directive": "^2.9.20",
     "ngx-bootstrap": "^5.6.1",
