--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ng2-search-filter": "^0.5.1",
     "ng2-tooltip-directive": "^2.9.20",
     "ngx-bootstrap": "^5.6.1",
+    "ngx-file-drop": "^9.0.1",
     "ngx-pagination": "^5.0.0",
     "ngx-scrolltop": "^1.0.0",
     "read-excel-file": "^4.0.6",
